overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: draft-demo
spec:
  type: LoadBalancer
