overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: draft-demo
spec:
  ingressClassName: nginx
  rules:
  - host: draft-demo.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: draft-demo
            port: 
              number: 8888
